# webapp

./: .gitignore  .gitmodules  README.md  RESTART.md  restart-services.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci-branched.yml  ci-cd-guide.md  ci-cd-guilde.md  ci-cd.yml  ci.yml  grafana.yml  old-ci.yml  test_database.yml
backend/: Dockerfile  README.md  pyproject.toml  run.sh
backend/app/: database.py  domain.py  main.py  services.py  synthetic_data.py  test_main.py  utils.py
backend/app/synthetic_data/: experiments.py  synthetic_data.py
backend/src/: main.py
database/: README.md
database/ai/: PROMPTS.md
database/backup/: README.md  database_backup.py  database_backup.service  database_backup.timer
database/docker/: .env  docker-compose.yml
database/docker/grafana/: Dockerfile
database/docker/grafana/dashboards/: comparison.json  plant_01.json  plant_02.json  plant_03.json  sensor_data.json
database/docker/grafana/provisioning/dashboards/: dashboards.yml
database/docker/timescaledb/: Dockerfile
database/init/: sensor_data.sql
docker/: .env  Dockerfile  README.md  RESTART.md  compose-restart.service  deploy.sh  docker-compose.yaml
frontend/: .env  Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/ai/: DEFECTS.md  PROMPTS.md
frontend/app/: constants.ts  vite-env.d.ts
frontend/app/components/: homepage.tsx  reading_interface.tsx  reading_timer.tsx  top_bar.tsx
frontend/app/routes/: home.tsx
scripts/: SCRIPTS.md  restart-services.sh  stop-services.sh
(+1 files in other folders)
