[project]
name = "webapp-coolbeans"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.123.9",
    "uvicorn>=0.38.0",
    "roslibpy>=2.0.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
dev = [
    "mypy==1.19.0",
    "pytest>=9.0.2",
    "types-psycopg2>=2.9.21.20251012",
    "fastapi-cloud-cli>=0.6.0",
]
